Basic touch events spike

--- a/src/client/homepage.html
+++ b/src/client/homepage.html
@@ -147,9 +147,9 @@
         }
     </style>
 
-    <script src="../../../vendor_client/jquery-1.8.2.js" type="text/javascript"></script>
-    <script src="../../../vendor_client/raphael-2.1.0.js" type="text/javascript"></script>
-    <script src="../../client/client.js" type="text/javascript"></script>
+    <script src="vendor_client/jquery-1.8.2.js" type="text/javascript"></script>
+    <script src="vendor_client/raphael-2.1.0.js" type="text/javascript"></script>
+    <script src="client.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -168,7 +168,9 @@
         <section>
             <h1>Draw Here:</h1>
 
-            <div id="drawingArea" style='height: 300px; width: 500px; border: solid red 2px'></div>
+            <div id="drawingArea" style='float:right; height: 300px; width: 500px; border: solid red 2px'></div>
+
+            <div style="font-size: 12px;">Info: <div id="info"></div> </div>
         </section>
     </div>
 </div>
