--- a/src/client/homepage.html
+++ b/src/client/homepage.html
@@ -147,9 +147,9 @@
         }
     </style>
 
-    <script src="../../../vendor_client/jquery-1.8.2.js" type="text/javascript"></script>
-    <script src="../../../vendor_client/raphael-2.1.0.js" type="text/javascript"></script>
-    <script src="../../client/client.js" type="text/javascript"></script>
+    <script src="vendor/jquery-1.8.2.js" type="text/javascript"></script>
+    <script src="vendor/raphael-2.1.0.js" type="text/javascript"></script>
+    <script src="client.js" type="text/javascript"></script>
 </head>
 
 <body>
