--- a/src/client/index.html
+++ b/src/client/index.html
@@ -151,6 +151,7 @@
     <script src="vendor/raphael-2.1.0.js" type="text/javascript"></script>
     <script src="client.js" type="text/javascript"></script>
     <script src="html_element.js" type="text/javascript"></script>
+    <script src="svg_canvas.js" type="text/javascript"></script>
 </head>
 
 <body>
