Modified smoke test to check that line is drawn and report results

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -177,7 +177,7 @@
 
 <script type="text/javascript">
     $(function() {
-        wwp.initializeDrawingArea(new wwp.HtmlElement($("#drawingArea")));
+        wwp.drawingAreaCanvas = wwp.initializeDrawingArea(new wwp.HtmlElement($("#drawingArea")));
     });
 </script>
 
