--- a/src/client/index.html
+++ b/src/client/index.html
@@ -149,9 +149,7 @@
 
     <script src="vendor/jquery-1.8.2.js" type="text/javascript"></script>
     <script src="vendor/raphael-2.1.0.js" type="text/javascript"></script>
-    <script src="client.js" type="text/javascript"></script>
-    <script src="html_element.js" type="text/javascript"></script>
-    <script src="svg_canvas.js" type="text/javascript"></script>
+    <script src="bundle.js" type="text/javascript"></script>
 </head>
 
 <body>
