HtmlElement() constructor now takes DOM element, not JQuery element

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -178,7 +178,7 @@
         var client = require("./client.js");
         var HtmlElement = require("./html_element.js");
 
-        client.drawingAreaCanvas = client.initializeDrawingArea(new HtmlElement($("#drawingArea")));
+        client.drawingAreaCanvas = client.initializeDrawingArea(new HtmlElement(document.getElementById("drawingArea")));
     });
 </script>
 
