--- a/src/client/404.html
+++ b/src/client/404.html
@@ -10,6 +10,8 @@
         /* Height hackery */
 
         html, body {
+            margin: 0;
+            padding: 0;
             height: 100%;
         }
 
@@ -21,77 +23,8 @@
             height: 100%;
         }
 
-        /* Page */
-
-        body {
-            background-color: #006666;
-        }
-
-        #container {
-            font-family: helvetica neue, helvetica, arial, sans-serif;
-            font-size: 16pt;
-            font-weight: 200;
-            max-width: 36em;
-
-            background-color: white;
-            padding: 0em 2em 0em 3.25em;
-            margin-left: auto;
-            margin-right: auto;
-
-            -moz-box-shadow: 0px 0px 15px 5px black;
-            -webkit-box-shadow: 0px 0px 15px 5px black;
-            box-shadow: 0px 0px 15px 5px black;
-        }
-
-        header {
-            font-size: 125%;
-            margin-bottom: 1em;
-            margin-top: -1em;
-            padding-top: 1em;
-        }
-
-        header h1 {
-            font-size: 125%;
-        }
-
-        header h2 {
-            font-size: 125%;
-        }
-
-        header a:hover {
-            background-color: transparent;
-        }
-
-        footer {
-            padding-bottom: 1em;
-        }
-
-        /* Dynamic Columns */
-
-        #left-column {
-            float: left;
-            /*			width: 525px; */
-            width: 15em;
-            padding-right: 3.5em;
-            text-align: center;
-        }
-
-        #right-column {
-            float: left;
-            max-width: 30em;
-            padding-right: 2em;
-            margin-top: 1em;
-        }
-
-        footer {
-            clear: both;
-        }
 
         /* General */
-
-        .clear {
-            clear: both;
-        }
 
         h1, h2, h3, h4, h5, h6 {
             margin-top: 1em;
@@ -102,12 +35,7 @@
             font-weight: 400;
         }
 
-        h2 {
-            font-size: 110%;
-            font-weight: 400;
-        }
-
-        section h1 {
+        .section h1 {
             color: #cc0000;
         }
 
@@ -139,23 +67,69 @@
             margin-left: 1em;
         }
 
-        /* Footer */
 
-        footer {
-            padding-top: 2em;
+        /* Page */
+
+        body {
+            background-color: #006666;
+        }
+
+        #container {
+            font-family: helvetica neue, helvetica, arial, sans-serif;
+            font-size: 16pt;
+            font-weight: 200;
+            width: 36em;
+
+            background-color: white;
+            padding: 0em 3.25em 0em 3.25em;
+            margin: 0 auto 0 auto;
+
+            box-shadow: 0px 0px 15px 5px black;
+        }
+
+        #content {
+            margin-top: 1em;
+        }
+
+
+        /* Headers and footers */
+
+        .header {
+            font-size: 125%;
+            margin: -1em 0 1em 0;
+            padding-top: 1em;
+        }
+
+        .header h1 {
+            font-size: 125%;
+        }
+
+        .footer {
+            padding: 2em 0 1em 0;
             margin-left: -4em;
             font-size: 67%;
         }
+
+
+        /* Drawing area */
+
+        #drawingArea {
+            height: 500px;
+            width: 36em;
+            border: solid #cc0000 2px;
+        }
+
+
     </style>
 </head>
 
 <body>
 <div id="container">
-    <div id="right-column">
-        <header>
+    <div id="content">
+        <div class="header">
             <h1>404: Not Found</h1>
-        </header>
-        <section>
+        </div>
+        <div class="section">
             <h1>I Would Like Fry With That</h1>
 
             <p>Not sure if bad because page not found...</p>
@@ -167,7 +141,8 @@
             <p>&nbsp;</p>
 
             <p>...or good because server still running.</p>
-        </section>
+        </div>
+        <div class="footer"></div>
     </div>
 </div>
 </body>
