Replaced curly quotes with straight quotes because UTF-8 support not tested yet

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -135,9 +135,9 @@
         <div class="section">
             <h1>Under Construction</h1>
 
-            <p>WeeWikiPaint is the web’s premier <em>collaborative painting site</em>. At least, it will be. Right now, it’s just a neat little doodling tool. Try it!</p>
+            <p>WeeWikiPaint is the web's premier <em>collaborative painting site</em>. At least, it will be. Right now, it's just a neat little doodling tool. Try it!</p>
 
-            <p>You can watch this site get developed! This project is part of James Shore’s <a href="http://www.letscodejavascript.com">Let's Code: Test-Driven Javascript</a> screencast, a series focused on rigorous, professional Javascript development. Come join the fun!</p>
+            <p>You can watch this site get developed! This project is part of James Shore's <a href="http://www.letscodejavascript.com">Let's Code: Test-Driven JavaScript</a> screencast, a series focused on rigorous, professional Javascript development. Come join the fun!</p>
         </div>
         <div class="section">
             <h1>Draw Here:</h1>
