Attempting to account for border in relative position calculations

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -116,6 +116,7 @@
             height: 500px;
             width: 36em;
             border: solid #cc0000 20px;
+            padding: 13px;
         }
 
 
