Relative position accounts for top padding

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -115,8 +115,8 @@
         #drawingArea {
             height: 500px;
             width: 36em;
-            border: solid #cc0000 20px;
-            padding: 13px;
+            /*border: solid #cc0000 20px;*/
+            padding-top: 50px;
         }
 
 
