Working on getting relative offset to account for borders on IE 8

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -116,7 +116,8 @@
             height: 500px;
             width: 36em;
             /*border: solid #cc0000 20px;*/
-            padding-top: 50px;
+            border-top-width: 20px;
+            border-top-style: solid;
         }
 
 
