--- a/src/client/index.html
+++ b/src/client/index.html
@@ -115,9 +115,9 @@
         #drawingArea {
             height: 500px;
             width: 36em;
-            /*border: solid #cc0000 20px;*/
-            border-top-width: 20px;
-            border-top-style: solid;
+            border: solid #cc0000 20px;
+            /*border-top-width: 20px;*/
+            /*border-top-style: solid;*/
         }
 
 
