Cleaned up coordinate conversion test to not add extraneous element

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -122,6 +122,7 @@
                 on IE 8 for an unknown reason.
             */
             height: 500px;
+            margin-left: 50px;
         }
 
 
