--- a/src/client/index.html
+++ b/src/client/index.html
@@ -157,7 +157,9 @@
         var client = require("./client.js");
         var HtmlElement = require("./html_element.js");
 
-        client.drawingAreaCanvas = client.initializeDrawingArea(new HtmlElement(document.getElementById("drawingArea")));
+        client.drawingAreaCanvas = client.initializeDrawingArea({
+            drawingAreaDiv: new HtmlElement(document.getElementById("drawingArea"))
+        });
     });
 </script>
 
