Added 'clear screen' button to HTML and styled it minimally

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -142,10 +142,10 @@
             <p>You can watch this site get developed! This project is part of James Shore's <a href="http://www.letscodejavascript.com">Let's Code: Test-Driven JavaScript</a> screencast, a series focused on rigorous, professional Javascript development. Come join the fun!</p>
         </div>
         <div class="section">
+            <input id="clearScreen" type="button" style="float:right;" value="Clear">
             <h1>Draw Here:</h1>
 
-            <div id="drawingAreaContainer">
-                <input id="clearScreen" type="button">
+            <div id="drawingAreaContainer" style="clear: both;">
                 <div id="drawingArea"></div>
             </div>
         </div>
