Refactored index.html to use HtmlElement.fromId()

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -159,8 +159,8 @@
         var HtmlElement = require("./html_element.js");
 
         client.drawingAreaCanvas = client.initializeDrawingArea({
-            drawingAreaDiv: new HtmlElement(document.getElementById("drawingArea")),
-            clearScreenButton: new HtmlElement(document.getElementById("clearScreen"))
+            drawingAreaDiv: HtmlElement.fromId("drawingArea"),
+            clearScreenButton: HtmlElement.fromId("clrScreen")
         });
     });
 </script>
