HtmlElement.fromId() fails fast when ID not found

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -160,7 +160,7 @@
 
         client.drawingAreaCanvas = client.initializeDrawingArea({
             drawingAreaDiv: HtmlElement.fromId("drawingArea"),
-            clearScreenButton: HtmlElement.fromId("clrScreen")
+            clearScreenButton: HtmlElement.fromId("clearScreen")
         });
     });
 </script>
