Hacked in solution to Raphael bug that causes sub-pixel gap

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -120,6 +120,12 @@
             height: 500px;
         }
 
+        /* Fix Raphael bug */
+        #drawingArea svg {
+            top: 0px !important;
+            left: 0px !important;
+        }
+
 
     </style>
 
