--- a/src/client/index.html
+++ b/src/client/index.html
@@ -129,7 +129,7 @@
 
     </style>
 
-    <script src="vendor/jquery-1.8.2.js" type="text/javascript"></script>
+    <script src="vendor/jquery-1.8.3.min.js" type="text/javascript"></script>
     <script src="vendor/raphael-2.1.0.js" type="text/javascript"></script>
     <script src="bundle.js" type="text/javascript"></script>
 </head>
