--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/html">
 <!-- smoke test marker: WeeWikiPaint home page -->
 <head>
     <title>WeeWikiPaint</title>
@@ -123,7 +122,7 @@
             border-radius: 10px;
             width: 100px;
             font-size: 90%;
-            font-weight: 100;
+            font-weight: 400;
             text-align: center;
             color: #ad0000;
         }
@@ -162,14 +161,12 @@
             <h1>WeeWikiPaint</h1>
         </div>
         <div class="section">
-            <h1>Under Construction</h1>
+            <p>WeeWikiPaint is the web's premier <em>collaborative painting site</em>. At least, it could be. Right now, it's just a neat little doodling tool. Try it below.</p>
 
-            <p>WeeWikiPaint is the web's premier <em>collaborative painting site</em>. At least, it could be. Right now, it's just a neat little doodling tool. Try it!</p>
-
-            <p>You can watch this site get developed! This project is part of James Shore's <a href="http://www.letscodejavascript.com">Let's Code: Test-Driven JavaScript</a> screencast, a series focused on rigorous, professional Javascript development. Come join the fun!</p>
+            <p>You can watch this site be developed! This project is part of James Shore's <a href="http://www.letscodejavascript.com">Let's Code: Test-Driven JavaScript</a> screencast, a series focused on rigorous, professional JavaScript development. Join us!</p>
         </div>
         <div class="section">
-            <input id="clearScreen" type="button" value="Clear">
+            <button id="clearScreen" type="button">Clear</button>
             <h1>Draw Here:</h1>
             <div class="clear"></div>
 
