--- a/src/client/index.html
+++ b/src/client/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <img src="/images/weewiki-logo.png" width="181" height="25" alt="WeeWikiPaint">
+    <img id="logo" src="/images/weewiki-logo.png" width="181" height="25" alt="WeeWikiPaint">
 
     <p>WeeWikiPaint is the web's premier <em>collaborative painting site</em>. At least, it could be. Right now, it's just a neat little doodling tool. Try it below.</p>
 
