Got drawing area arrow to snug up to top of drawing area

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -16,7 +16,7 @@
     <p id="tagline">WeeWikiPaint is the web's premier collaborative site. Go on, give it a try!</p>
 
     <div id="drawingAreaContainer">
-        <div id="drawingAreaArrow"><img src="/images/arrow.png" width="18" height="9" alt=""></div>
+        <div id="drawingAreaArrow"></div>
         <div id="drawingArea"></div>
     </div>
 
