Starting work on styling the 'clear' button

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -20,7 +20,7 @@
         <div id="drawingArea"></div>
     </div>
 
-    <button id="clearScreen" type="button">Clear</button>
+    <button id="clearButton" type="button">Clear</button>
 
 
     <p>You can watch this site be developed at Let's Code: Test-Driven JavaScript!</p>
