Styled and tested footer

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -21,9 +21,7 @@
         <div id="drawingArea"></div>
     </div>
 
-
-
-    <p>You can watch this site be developed at Let's Code: Test-Driven JavaScript!</p>
+    <p id="footer">You can watch this site be developed at Let's Code: Test-Driven JavaScript!</p>
     <button type="button">Join us!</button>
 
 
