--- a/src/client/index.html
+++ b/src/client/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <p id="footer">You can watch this site be developed at Let's Code: Test-Driven JavaScript!</p>
-    <button type="button">Join us!</button>
+    <div id="joinUs"><a href='http://www.letscodejavascript.com'>Join Us!</a></div>
 
 
     <script type="text/javascript">
