Converted 'join us' link from inline link to standalone block

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <p id="footer">You can watch this site be developed at Let's Code: Test-Driven JavaScript!</p>
-    <div id="joinUs"><a href='http://www.letscodejavascript.com'>Join Us!</a></div>
+    <a id="joinUs" href='http://www.letscodejavascript.com'>Join Us!</a>
 
 
     <script type="text/javascript">
