Starting to move CSS tests into a frame

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -23,7 +23,7 @@
 
     <p id="footer">You can watch this site be developed at Let's Code: Test-Driven JavaScript!</p>
     <a id="joinUs" href='http://www.letscodejavascript.com'>Join Us!</a>
-
+    <iframe width='1000px' height='1000px'></iframe>
 
     <script type="text/javascript">
         $(function() {
