--- a/src/client/index.html
+++ b/src/client/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>WeeWikiPaint</title>
 
-    <link rel="stylesheet" type="text/css" href="./screen.css">
+    <link id="style" rel="stylesheet" type="text/css" href="./screen.css">
 
     <script src="vendor/jquery-1.8.3.min.js" type="text/javascript"></script>
     <script src="vendor/raphael-2.1.2.min.js" type="text/javascript"></script>
