--- a/src/client/index.html
+++ b/src/client/index.html
@@ -8,6 +8,29 @@
     <script src="vendor/jquery-1.8.3.min.js" type="text/javascript"></script>
     <script src="vendor/raphael-2.1.2.min.js" type="text/javascript"></script>
     <script src="bundle.js" type="text/javascript"></script>
+
+    <script>
+        (function(d) {
+            var config = {
+                        kitId: 'qzr7zlc',
+                        scriptTimeout: 3000
+                    },
+                    h = d.documentElement, t = setTimeout(function() {h.className = h.className.replace(/\bwf-loading\b/g, "") + " wf-inactive";}, config.scriptTimeout), tk = d.createElement("script"), f = false, s = d.getElementsByTagName("script")[0], a;
+            h.className += " wf-loading";
+            tk.src = '//use.typekit.net/' + config.kitId + '.js';
+            tk.async = true;
+            tk.onload = tk.onreadystatechange = function() {
+                a = this.readyState;
+                if (f || a && a != "complete" && a != "loaded")return;
+                f = true;
+                clearTimeout(t);
+                try {Typekit.load(config)} catch(e) {}
+            };
+            s.parentNode.insertBefore(tk, s)
+        })(document);
+    </script>
+
+
 </head>
 
 <body>
