Typekit seems to be working in PhantomJS

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -34,7 +34,7 @@
                 inactive: logEvent("inactive"),
                 fontloading: logEvent("fontloading"),
                 fontactive: logEvent("fontactive"),
-                fontinactive: logEvent("fontinactive")
+                fontinactive: logEvent("fontinactive"),
 
                 active: done,
 //                inactive: done,
@@ -44,7 +44,7 @@
                         font: font,
                         variant: variant
                     });
-                },
+                }
             },
             h = d.documentElement,
             t = setTimeout(function() {
