Restored correct Typekit ID

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -19,7 +19,7 @@
             }
 
             var config = {
-                kitId: 'xxx',
+                kitId: 'qzr7zlc',
                 scriptTimeout: 3000,
                 active: done,
                 inactive: done,
