Fixed missing 'html' tag in index.html

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<!-- smoke test marker: WeeWikiPaint home page -->
+<html>
 <head>
+    <!-- smoke test marker: WeeWikiPaint home page -->
     <title>WeeWikiPaint</title>
 
     <link id="style" rel="stylesheet" type="text/css" href="./screen.css">
