--- a/src/client/index.html
+++ b/src/client/index.html
@@ -71,7 +71,7 @@
 		<button id="clear-button" type="button">Clear</button>
 	</div>
 
-	<p id="footer">Watch this site be developed at Let’s Code: Test-Driven JavaScript!</p>
+	<p id="footer">We’re developing this site LIVE at Let’s Code: Test-Driven JavaScript!</p>
 	<a id="join-us" href='http://www.letscodejavascript.com'>Join Us!</a>
 
 	<script type="text/javascript">
