--- a/src/client/index.html
+++ b/src/client/index.html
@@ -4,11 +4,15 @@
 	<!-- smoke test marker: WeeWikiPaint home page -->
 	<title>WeeWikiPaint</title>
 
+	<!-- #cat min.css -->
 	<link id="style" rel="stylesheet" type="text/css" href="./screen.css">
+	<!-- endcat -->
 
 	<script src="vendor/jquery-1.8.3.min.js" type="text/javascript"></script>
 	<script src="vendor/raphael-2.1.2.min.js" type="text/javascript"></script>
+	<!-- #cat app.min.js -->
 	<script src="bundle.js" type="text/javascript"></script>
+	<!-- endcat -->
 
 	<script>
 		(function(d) {
