Got basic CSS test of 404 page working

--- a/src/client/404.html
+++ b/src/client/404.html
@@ -3,17 +3,21 @@
 <!-- smoke test marker: WeeWikiPaint 404 page -->
 <head>
     <title>404: Not Found</title>
+
+    <!-- #cat min.css -->
+   	<link id="style" rel="stylesheet" type="text/css" href="./screen.css">
+   	<!-- endcat -->
 </head>
 
 <body>
-    <div>
+    <div id="logo-404">
       <img src="/images/weewiki-logo.png" width="181" height="25" alt="WeeWikiPaint">
     </div>
 
-    <p>404</p>
+    <p id="header-404">404</p>
 
-    <p>There’s only one page on this site...</p>
+    <p id="text-404">There’s only one page on this site...</p>
 
-    <a href='/'>Go Draw Something</a>
+    <a id="draw-something-404" href='/'>Go Draw Something</a>
 </body>
 </html>
