Implemented 404 page color scheme

--- a/src/client/404.html
+++ b/src/client/404.html
@@ -10,13 +10,13 @@
 </head>
 
 <body>
+
+    <p id="header-404">404</p>
     <div id="logo-404">
       <img src="/images/weewiki-logo.png" width="181" height="25" alt="WeeWikiPaint">
     </div>
 
-    <p id="header-404">404</p>
-
-    <p id="text-404">There’s only one page on this site...</p>
+    <p id="tagline-404">There’s only one page on this site...</p>
 
     <a id="draw-something-404" href='/'>Go Draw Something</a>
 </body>
