--- a/src/client/index.html
+++ b/src/client/index.html
@@ -14,6 +14,7 @@
 	<script src="bundle.js" type="text/javascript"></script>
 	<!-- endcat -->
 
+	<!-- Typekit -->
 	<script>
 		(function(d) {
 			window.wwp_loadedFonts = [];
