--- a/src/client/index.html
+++ b/src/client/index.html
@@ -5,7 +5,8 @@
 	<title>WeeWikiPaint</title>
 
 	<!-- #cat min.css -->
-	<link id="style" rel="stylesheet" type="text/css" href="./screen.css">
+	<link rel="stylesheet" type="text/css" href="./vendor/normalize-3.0.2.css">
+	<link rel="stylesheet" type="text/css" href="./screen.css">
 	<!-- endcat -->
 
 	<script src="vendor/jquery-1.8.3.min.js" type="text/javascript"></script>
