Factored out drawing area block

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -72,7 +72,7 @@
 	<p id="tagline">WeeWikiPaint is a nifty doodling tool. Go on, give it a try!</p>
 
 	<div id="drawing-area-container">
-		<div id="drawing-area"></div>
+		<div id="drawing-area" class="drawing-area"></div>
 		<div id="drawing-area-arrow"></div>
 		<button id="clear-button" type="button">Clear</button>
 	</div>
